--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^7.1.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.33.0",
